2010-05-13  Glenn Morris  <rgm@gnu.org>

	* configure.in: Fix some paren typos.

	* configure.in (OLDXMENU, LIBXMENU): Set to empty if !HAVE_MENUS.

	* configure.in (LD_SWITCH_X_SITE, C_SWITCH_X_SITE): Do not define.

2010-05-12  Glenn Morris  <rgm@gnu.org>

	* configure.in (LIB_SRC_EXTRA_INSTALLABLES): Remove, unused.

	* configure.in (LIB_GCC): New output variable.

2010-05-11  Glenn Morris  <rgm@gnu.org>

	* make-dist (msdos): No more mainmake.

	* configure.in: Generate lib-src/Makefile directly, do not run cpp.
	* config.bat: Do not run cpp on lib-src/Makefile.in.

	* config.bat [HAVE_X11]: Run sed3x.inp on lib-src/Makefile.

2010-05-10  Glenn Morris  <rgm@gnu.org>

	* configure.in (LIBS_SYSTEM): New output variable, replacing cpp.

	* configure.in (MAIL_USE_FLOCK, MAIL_USE_LOCKF): New AC_DEFINEs.
	(BLESSMAIL_TARGET): New output variable.

2010-05-08  Štěpán Němec  <stepnem@gmail.com>  (tiny change)

	* INSTALL: Fix typos.

2010-05-08  Chong Yidong  <cyd@stupidchicken.com>

	* configure.in: Add check for buggy version of GCC (Bug#6031).

2010-05-08  Glenn Morris  <rgm@gnu.org>

	* configure.in (HAVE_LIBNCURSES): New local variable.
	(TERMINFO, LIBS_TERMCAP, TERMCAP_OBJ): New output variables,
	replacing cpp in src/s/*.h and src/Makefile.in.

2010-05-07  Chong Yidong  <cyd@stupidchicken.com>

	* Version 23.2 released.

2010-05-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* configure.in: Add tests for `isnan' and `copysign'.

2010-05-07  Eli Zaretskii  <eliz@gnu.org>

	* config.bat: Allow for 2 leading `#'s in comments in
	src/Makefile.in.

2010-05-07  Glenn Morris  <rgm@gnu.org>

	* configure.in (LD_SWITCH_SYSTEM): Set with configure, not cpp.
	Merges logic from src/s/* and src/Makefile.in.
	(LD_SWITCH_SYSTEM_TEMACS): New output variable.

2010-05-07  Dan Nicolaescu  <dann@ics.uci.edu>

	Define START_FILES and LIB_STANDARD using autoconf.
	* configure.in (START_FILES, LIB_STANDARD): New definitions, moved
	here from src/s/*.h.