@@ -1,3 +1,7 @@
+2010-05-14  Glenn Morris  <rgm@gnu.org>
+
+	* sed1v2.inp (@NS_IMPL_GNUSTEP_INC@): Edit to nil.
+
 2010-05-13  Glenn Morris  <rgm@gnu.org>
 
 	* sed1x.inp (OLDXMENU): Edit to ${oldXMenudir}libXMenu11.a.
