@@ -1,3 +1,8 @@
+2010-05-14  Glenn Morris  <rgm@gnu.org>
+
+	* configure.in (NS_IMPL_GNUSTEP_INC): New output variable.
+	(GNUSTEP_MAKEFILES): Do not output.
+
 2010-05-13  Glenn Morris  <rgm@gnu.org>
 
 	* configure.in: Fix some paren typos.
